examples/valid/exit/exitBasic.wacc
# basic exit statement
# Output:
# #empty#

#Program:#

begin
	exit 7
end
