examples/invalid/syntaxErr/sequence/missingSeq.wacc
# missing sequential composition
# Output:
# #syntax error#

#Program:#

begin 
  skip
  skip 
end
